--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,13 +1,13 @@
 workflows:
   android-release:
     name: Build APK Release
-    max_build_duration: 30
+    max_build_duration: 120
     environment:
       android_signing:
-        keystore: CM_KEYSTORE
-        keystore_password: CM_KEYSTORE_PASSWORD
-        key_alias: CM_KEY_ALIAS
-        key_password: CM_KEY_PASSWORD
+        - keystore: CM_KEYSTORE
+          keystore_password: CM_KEYSTORE_PASSWORD
+          key_alias: CM_KEY_ALIAS
+          key_password: CM_KEY_PASSWORD
       vars:
         JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     scripts:
